# cxx-demo-example

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build_linux.bash  build_windows64.bat  cbindgen.toml
cmake/modules/: CxxDemoExampleUtils.cmake
include/: CMakeLists.txt
include/mmscenegraph/: _cbindgen.h  _cpp.h  _cxxbridge.h  symbol_export.h
src/: CMakeLists.txt  _cxxbridge.cpp  cxxbridge.rs  ffi.rs
tests/: CMakeLists.txt  main.cpp  test_a.cpp  test_b.cpp
