[package]
name = "mmscenegraph-rs"
version = "0.1.0"
authors = ["David Cattermole <cattermole91@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "mmscenegraph_rs"
path = "./src/lib.rs"
# NOTE: 'lib' is used to link with Rust crates, 'staticlib' is used to
# link with C++.
crate_type = ["staticlib"]

[dependencies]
cxx = { git = "https://github.com/david-cattermole/cxx.git", rev = "d58c650847d1f734d1c09a4e87d50f5904f2c4f5" }
libc = "0.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
# NOTE: If we use 'panic = "abort"' then we are unable to produce tests.
# # https://github.com/rust-lang/cargo/issues/6313
#
# panic = "abort"
debug-assertions = false
